fix: header font-size on mobile

--- a/services/services.css
+++ b/services/services.css
@@ -206,6 +206,11 @@ td {
     .header__image {
         display: none;
     }
+
+    .header__link {
+        font-size: 16px;
+    }
+
     .header__logo {
         display: none;
     }
